// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a customer account should not be able to update groups 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Field 'slug' cannot be updated for default group with ID (ownerGroup) and name (owner).",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Field 'slug' cannot be updated for default group with ID (ownerGroup) and name (owner).",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 2`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Field 'slug' cannot be updated for default group with ID (guestGroup) and name (guest).",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Field 'slug' cannot be updated for default group with ID (guestGroup) and name (guest).",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 3`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Field 'slug' cannot be updated for default group with ID (customerGroup) and name (customer).",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Field 'slug' cannot be updated for default group with ID (customerGroup) and name (customer).",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group if is doesn't match 4`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account should not be able to change the slug of a default group unless it matches 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "updateAccountGroup",
      "group",
    ],
  },
]
`;
